<?xml version="1.0" encoding="utf-8"?>

<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.fragment.app.FragmentContainerView
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragmentMap"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RutasFragment"
        android:layout_marginTop="108dp"
        />

    <LinearLayout
        android:id="@+id/llDistanceSpeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#DA000000"
        android:layout_gravity="top"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/tvDistance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/distancia"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tvSpeed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/velocidad"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTiempoCalorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="top"
        android:background="#D8000000"
        android:padding="10dp"
        android:layout_marginTop="54dp"
        >

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/tiempo"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tvCalories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/calorias"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btnCalculateRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_margin="16dp"
        android:padding="12dp"
        android:text="@string/empezar"
        android:backgroundTint="#E6000000"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:elevation="4dp"
        android:translationZ="4dp"
        android:layout_marginBottom="32dp"
        />

    <TextView
        android:id="@+id/tvCountDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="272sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:visibility="gone"
        tools:text="3"/>

</FrameLayout>